@@ -1,3 +1,7 @@
+2016-03-10  Benno Schulenberg  <bensberg@justemail.net>
+	* src/rcfile.c (grab_and_store): Do not accept 'header" and 'magic'
+	commands for the default syntax.  This fixes Savannah bug #47323.
+
 2016-03-09  Benno Schulenberg  <bensberg@justemail.net>
 	* src/rcfile.c (parse_syntax): Produce an adequate error message
 	when the syntax name is unquoted.  This fixes Savannah bug #47324.
